# AutoPilot-AI

./: .env.example  .gitignore  DYNAMIC_TOOLS_USAGE.md  GITHUB_INTEGRATION.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  README.md  SETUP.md  app.py  butterflies.sh  check_bedrock_health_standalone.py  config.py  design.md  implementation_plan.md  instructions.md  main.py  pyproject.toml  read_pdf.py  requirements-dev.txt  requirements.md  requirements.txt  run.ps1  start.ps1  start.sh  tasks.md  test_claude.py  test_deepseek.py  test_integration_flow.py
agents/: __init__.py  cicd_agent.py  cost_agent.py  db_agent.py  infra_agent.py  observability_agent.py  planner_agent.py  unified_agent.py
api/: __init__.py  routes.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
models/: __init__.py  agent_protocol.py  core_models.py
scripts/: check_bedrock_health.py  migrate_auth_db.py  seed_demo_data.py  test_bedrock_quotes.py
services/: __init__.py  auth_store.py  aws_api_executor.py  bedrock_agent_service.py  bedrock_client.py  billing_client.py  cloudwatch_client.py  currency_formatter.py  github_client.py  github_service.py  insight_generator.py  knowledge_base.py  knowledge_base_factory.py  local_knowledge_base.py  notification_service.py  ops_state_store.py  scheduler.py  tool_generator.py
tests/: __init__.py  test_actual_cloudwatch.py  test_aws_balance.py  test_aws_credits.py  test_claude.py  test_cloudwatch_integration.py  test_debug_route.py  test_deepseek.py  test_github.py  test_iam_user.py  test_planner_e2e.py  (+2 more)
(+70 files in other folders)
