[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "autopilot-ai"
version = "0.1.0"
description = "Multi-agent AI SRE system for Indian startups"
requires-python = ">=3.12"
dependencies = [
    # AWS
    "boto3>=1.34.0",
    "botocore>=1.34.0",

    # Pydantic ecosystem
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Resilience
    "tenacity>=8.2.3",

    # Logging
    "structlog>=24.1.0",

    # GitHub integration
    "PyGithub>=2.2.0",

    # Async HTTP (for webhooks/external APIs)
    "httpx>=0.27.0",

    # Rate limiting
    "slowapi>=0.1.9",

    # Utilities
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
]

[project.scripts]
autopilot = "autopilot_ai.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "moto[bedrock,s3,cloudwatch,ecs,ce]>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autopilot_ai*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI dependency injection pattern

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
